# flask-boilerplate

./: .gitignore  README.md  README_NEWREPO.md  cookiecutter.json  create_my_new_project.py  pyproject.toml
.github/workflows/: check.yml  check_create_new_project.yml  check_types.yml  main.yml  pytest.yml  ruff.yml  test.yml
hooks/: post_gen_project.py  pre_gen_project.py
mycoolapp/: __init__.py  blueprint_one.py  blueprint_one_object.py  config.py  logger.py  mycoolapp_blueprint_one.py  mycoolapp_logger.py  mycoolapp_settings.py  settings.py
mycoolapp/static/: mycoolapp.js
mycoolapp/templates/: home.html.j2
tests/: __init__.py  conftest.py  test__meta.py  test__no_pollution.py  test_blueprint_one.py  test_config.py  test_config_file_creation.py  test_config_invalid.py  test_config_unit.py  test_hello.py  test_home.py  test_launch.py  test_logger.py  test_logger_unit.py
tests/configs/: bp_one_different_my_message.toml  different_my_message.toml  invalid.toml  logging_path_invalid.toml.j2  logging_path_valid.toml.j2  testing_false_valid.toml
{{cookiecutter.__app_slug}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.__app_slug}}/.github/workflows/: test.yml
{{cookiecutter.__app_slug}}/tests/: conftest.py  test__meta.py  test__no_pollution.py  test_blueprint_one.py  test_config.py  test_config_unit.py  test_home.py  test_logger.py  test_logger_unit.py
{{cookiecutter.__app_slug}}/tests/configs/: bp_one_different_my_message.toml  testing_true_valid.toml
{{cookiecutter.__app_slug}}/{{cookiecutter.__app_package}}/: __init__.py  blueprint_one.py  blueprint_one_object.py  config.py  logger.py
{{cookiecutter.__app_slug}}/{{cookiecutter.__app_package}}/templates/: home.html.j2
{{cookiecutter.app_slug}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.app_slug}}/tests/: conftest.py  test__meta.py  test__no_pollution.py  test_blueprint_one.py  test_config.py  test_config_unit.py  test_home.py  test_logger.py  test_logger_unit.py
{{cookiecutter.app_slug}}/tests/configs/: logging_invalid.toml  logging_invalid_log_level.toml
{{cookiecutter.app_slug}}/{{cookiecutter.app_slug}}/: __init__.py  blueprint_one.py  blueprint_one_object.py  config.py  logger.py
{{cookiecutter.app_slug}}/{{cookiecutter.app_slug}}/static/: zy.css  {{cookiecutter.app_slug}}.js
{{cookiecutter.app_slug}}/{{cookiecutter.app_slug}}/templates/: home.html.j2
