[tool.poetry]
name = "mycoolapp"
version = "0.0.1"
description = ""
authors = ["Your Name <youremailaddress@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0"
waitress = "^3.0"
tomlkit = "^0.12"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pylance = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-fixable = ["B", "I001"] # KG I think this means something...
select = ["ALL"] # KG Include absolutely all of Ruff's rules.
ignore = [
    # Modules
    "DJ",  # Django
    "PTH", # KG builtin-open is fine
    "DTZ", # KG no need to specify timezone

    # Specific rules
    "ANN101", # KG Why define self...
    "TD002",  # KG Verbose TODO, only I work on this project
    "TD003",  # KG Verbose TODO, only I work on this project
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    # Modules
    "ARG", # KG Unused function args -> fixtures nevertheless are functionally relevant
    "FBT", # KG Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()

    # Specific rules
    "S101",   # KG asserts allowed in tests.
    "INP001", # KG no __init__.py needed for pytest.
]
"create_my_new_project.py" = [ # If you have used this boilerplate to start making your app, you can delete this.
    # Specific rules
    "T201", # KG print() is fine for the scale of this file
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 40

[tool.pytest]
testpaths = "tests"
